тесты + небольшие правки